Handling user session by LoginRadius and MongoDB

--- a/web/Register.xhtml
+++ b/web/Register.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
-    <head>
+    <h:head>
         <title>Quidder</title>
         <link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'/>
         <link href='css/quidder-listener.css' rel='stylesheet' type='text/css'/>  
@@ -11,8 +11,17 @@
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/LoginRadius.js"></script>
         <script src="js/login.js" ></script>
-    </head>
-    <body style="background-image:url(images/world.jpg);background-repeat:no-repeat;background-position:right top;">
+    </h:head>
+    <h:body style="background-image:url(images/world.jpg);background-repeat:no-repeat;background-position:right top;">
+        <div>
+            <h:form id="hidden-from" prependId="false">                                            
+                <h:inputHidden id="provider" value="#{userManagedBean.provider}"></h:inputHidden>
+                <h:inputHidden id="user-profile" value="#{userManagedBean.jsonUserDataProfile}"></h:inputHidden>                                                                                                                       
+                <h:commandButton id="buttonId" type="submit" value="Button" style="display: none;">
+                    <f:ajax execute="@form" listener="#{userManagedBean.login()}" />
+                </h:commandButton>      
+            </h:form>
+        </div>   
         <div class="qd-register-box">            
             <img class="img2" src="images/logo.png" width="40" height="40"></img>
             <p class="qd-register-tittle">uidder</p>
@@ -22,8 +31,6 @@
         </div>  
         <div class="qd-pin-box">
             <p id="userID" class="pin"></p>
-        </div>
-        
-
-    </body>
+        </div>             
+    </h:body>
 </html>
